src/test/ui/issues/issue-21174.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/issue-21174.rs:7:30
   |
LL |     let new: T::B = unsafe { std::mem::transmute(value) };
   |                              ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `<T as Trait>::A` (this type does not have a fixed size)
   = note: target type: `<T as Trait>::B` (this type does not have a fixed size)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0512`.
